apps/06-media-apps/15-crashplan/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: media
  name: crashplan
  labels:
    app: crashplan
spec:
  serviceName: crashplan
  replicas: 1
  selector:
    matchLabels:
      app: crashplan
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: crashplan
    spec:
      containers:
      - name: crashplan
        image: jlesage/crashplan-pro:v24.08.1 # {"$imagepolicy": "flux-system:crashplan-policy"}
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: true
          runAsNonRoot: false
        ports:
          - containerPort: 5800
            name: crashplan-web
        livenessProbe:
          tcpSocket:
            port: crashplan-web
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: crashplan-web
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 10
          successThreshold: 1
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /mnt/backup
            name: nas-backup
          - mountPath: /mnt/public
            name: nas-lh-public
          - mountPath: /mnt/syncthing
            name: nas-nvme-syncthing
      volumes:
        - name: nas-backup
          persistentVolumeClaim:
            claimName: nas-backup
        - name: nas-lh-public
          persistentVolumeClaim:
            claimName: nas-lh-public
        - name: nas-nvme-syncthing
          persistentVolumeClaim:
            claimName: nas-nvme-syncthing
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 10Gi
