apps/06-media-apps/15-crashplan/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crashplan
  namespace: media
spec:
  selector:
    app: crashplan
  ports:
    - name: crashplan-web
      protocol: TCP
      port: 5800
      targetPort: crashplan-web
  type: ClusterIP
