apps/06-media-apps/15-crashplan/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "backup.wl.mort.is"
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-authentik-embedded-outpost.auth.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://auth.wl.mort.is/outpost.goauthentik.io/start?rd=$scheme%3A%2F%2F$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
  name: crashplan
  namespace: media
spec:
  ingressClassName: nginx-secure
  tls:
  - hosts:
    - backup.wl.mort.is
  rules:
  - host: backup.wl.mort.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crashplan
            port:
              number: 5800
